--- a/server/core/templates/login_denied.html
+++ b/server/core/templates/login_denied.html
@@ -5,7 +5,7 @@
 	<main id="main">
 		<p>Reason: (( reason ))</p>
 		<p>Operation ID: (( operation_id ))</p>
-		<a href="/ui/login">
+		<a href=((Urls::Login.as_ref()))>
 			<button type="button" class="btn btn-success">Return to Login</button>
 		</a>
 	</main>
