--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -125,7 +125,7 @@
                             <path
                                 d="M1.5 0A1.5 1.5 0 0 0 0 1.5v13A1.5 1.5 0 0 0 1.5 16h13a1.5 1.5 0 0 0 1.5-1.5V2.914a1.5 1.5 0 0 0-.44-1.06L14.147.439A1.5 1.5 0 0 0 13.086 0zM4 6a1 1 0 0 1-1-1V1h10v4a1 1 0 0 1-1 1zM3 9h10a1 1 0 0 1 1 1v5H2v-5a1 1 0 0 1 1-1" />
                         </svg>
-                        <b class="px-1">Careful</b>- Unsaved changes will be lost</div>
+                        <b>Careful</b> - Unsaved changes will be lost</div>
                     </span>
                     <div class="mt-2 pt-2 border-top">
                         <button class="btn btn-danger"
