--- a/server/core/templates/login_base.html
+++ b/server/core/templates/login_base.html
@@ -17,11 +17,9 @@
 			alt="Kanidm" class="kanidm_logo" />
 		(% endif %)
 		<h3>Kanidm</h3>
-		(% match display_ctx.reauth %)
-			(% when Some with (reauth) %)
-				<h5>Reauthenticating as (( reauth.username )) to access (( reauth.purpose ))</h5>
-			(% when None %)
-		(% endmatch %)
+		(% if let Some(reauth) = display_ctx.reauth %)
+			<h5>Reauthenticating as (( reauth.username )) to access (( reauth.purpose ))</h5>
+		(% endif %)
 	</center>
 	<div id="login-form-container" class="container">
 		(% block logincontainer %)
