--- a/server/core/templates/credentials_status.html
+++ b/server/core/templates/credentials_status.html
@@ -6,8 +6,8 @@
 <div class="d-flex align-items-start form-cred-reset-body">
     <div class="w-100">
         <div class="py-3">
-            <p>(( names ))</p>
-            <p>(( domain_info.display_name() ))</p>
+            <p><strong>User:</strong> (( names ))</p>
+            <p><strong>Kanidm domain:</strong> (( domain_info.display_name() ))</p>
         </div>
         (( credentials_update_partial|safe ))
     </div>
