--- a/server/core/templates/user_settings_posix_partial.html
+++ b/server/core/templates/user_settings_posix_partial.html
@@ -14,7 +14,7 @@ Unix/Posix Settings
         <button class="btn btn-primary" type="button" hx-post="/ui/api/user_settings/edit_posix">Edit</button>
     (% else %)
         <a href=(Urls::ProfileUnlock) hx-boost="false">
-            <button class="btn btn-primary" type="button">Unlock Edit 🔒</button>
+            <button class="btn btn-primary" type="button">((UiMessage::UnlockEdit))</button>
         </a>
     (% endif %)
 (% endblock %)
