yale's rabbit-hole-chasing-htmx-fixing-megapatch (#3135)

--- a/server/core/templates/user_settings_posix_partial.html
+++ b/server/core/templates/user_settings_posix_partial.html
@@ -13,8 +13,8 @@ Unix/Posix Settings
     (% if can_rw %)
         <button class="btn btn-primary" type="button" hx-post="/ui/api/user_settings/edit_posix">Edit</button>
     (% else %)
-        <a href="/ui/profile/unlock" hx-boost="false">
-            <button class="btn btn-primary" type="button">Unlock Edit 🔒</button>
+        <a href=(Urls::ProfileUnlock) hx-boost="false">
+            <button class="btn btn-primary" type="button">((UiMessage::UnlockEdit))</button>
         </a>
     (% endif %)
 (% endblock %)
