Okayi everything testing and happier

--- a/server/core/templates/credential_update_add_passkey_partial.html
+++ b/server/core/templates/credential_update_add_passkey_partial.html
@@ -3,7 +3,12 @@
         <script id="data">(( challenge|safe ))</script>
 
         <!-- Safari requires a human input to start passkey creation -->
-        <button id="passkeyNamingSafariBtn" class="btn btn-primary">Begin Passkey Enrolment</button>
+        <div id="passkeyNamingSafariPre">
+            <button id="passkeyNamingSafariBtn" class="btn btn-primary">Begin Passkey Enrolment</button>
+            <div class="d-flex justify-content-end pt-3 g-3" hx-target="#credentialUpdateDynamicSection">
+               <button id="password-cancel" type="button" class="btn btn-danger" hx-post="/ui/api/cancel_mfareg">Cancel</button>
+            </div>
+        </div>
 
         <form id="passkeyNamingForm" class="g-2 d-none">
             <b>Adding a new passkey</b>
