--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -11,18 +11,17 @@
         (% match ext_cred_portal %)
         (% when CUExtPortal::None %)
         (% when CUExtPortal::Hidden %)
-        <hr class="my-4" />
         <p>This account is externally managed. Some features may not be
             available.</p>
-        (% when CUExtPortal::Some(url) %)
         <hr class="my-4" />
+        (% when CUExtPortal::Some(url) %)
         <p>This account is externally managed. Some features may not be
             available.</p>
         <a href="(( url ))">Visit the external account portal</a>
+        <hr class="my-4" />
         (% endmatch %)
 
         (% if warnings.len() > 0 %)
-        <hr class="my-4" />
         (% for warning in warnings %)
         (% let is_danger = [CURegWarning::WebauthnAttestationUnsatisfiable,
         CURegWarning::Unsatisfiable].contains(warning) %)
@@ -57,6 +56,7 @@
                 (% endif %)
             </div>
             (% endfor %)
+            <hr class="my-4" />
             (% endif %)
 
             <!-- Attested Passkeys -->
@@ -142,10 +142,8 @@
             (% when CUCredState::PolicyDeny %)
             (% endmatch %)
 
-
             <hr class="my-4" />
-            <div id="cred-update-commit-bar" class="toast" role="alert"
-                aria-live="assertive" aria-atomic="true">
+            <div id="cred-update-commit-bar" class="toast">
                 <div class="toast-body">
                     <span class="d-flex align-items-center">
                         <div>
