--- a/server/core/templates/credential_update_set_unixcred_partial.html
+++ b/server/core/templates/credential_update_set_unixcred_partial.html
@@ -54,7 +54,7 @@
         </div>
     </form>
     <div class="g-3 d-flex justify-content-end" hx-target="#credentialUpdateDynamicSection">
-        <button id="password-cancel" type="button" class="btn btn-danger me-2" hx-get="/ui/reset" hx-target="body">Cancel</button>
+        <button id="password-cancel" type="button" class="btn btn-danger me-2" hx-get=((Urls::CredReset)) hx-target="body">Cancel</button>
         <button id="password-submit" type="button" class="btn btn-primary"
                 hx-post="/ui/reset/set_unixcred"
                 hx-include="#newPasswordForm"
