--- a/server/core/templates/credentials_reset.html
+++ b/server/core/templates/credentials_reset.html
@@ -11,6 +11,7 @@
         <p>(( names ))</p>
         <p>(( domain_info.display_name() ))</p>
     </div>
+    <hr class="my-4" />
     (( credentials_update_partial|safe ))
 </main>
 (% endblock %)
