--- a/server/core/templates/credentials_reset.html
+++ b/server/core/templates/credentials_reset.html
@@ -8,8 +8,8 @@
 <main class="form-cred-reset-body container my-auto">
     <div class="text-center">
         <h3>Updating Credentials</h3>
-        <p>(( names ))</p>
-        <p>(( domain_info.display_name() ))</p>
+        <p><strong>User:</strong> (( names ))</p>
+        <p><strong>Kanidm domain:</strong> (( domain_info.display_name() ))</p>
     </div>
     <hr class="my-4" />
     (( credentials_update_partial|safe ))
