--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -116,7 +116,7 @@
             (% when CUCredState::Modifiable %)
             <hr class="my-4" />
             <h4>UNIX Password</h4>
-            <p>This password is used when logging into a unix-like system as well as applications utilizing LDAP</p>
+            <p>This password is used when authenticating to a UNIX-like</p>
             <button type="button" class="btn btn-secondary"
                 hx-post="/ui/reset/set_unixcred"
                 hx-target="#credentialUpdateDynamicSection">
@@ -127,7 +127,7 @@
             <button type="button" class="btn btn-outline-danger"
                 hx-post="/ui/api/delete_unixcred"
                 hx-target="#credentialUpdateDynamicSection">
-                Delete Unix Password
+                Delete UNIX Password
             </button>
             (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::GeneratedPassword }) %)
             (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::Passkey(_) }) %)
