--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -116,7 +116,7 @@
             (% when CUCredState::Modifiable %)
             <hr class="my-4" />
             <h4>UNIX Password</h4>
-            <p>This password is used when authenticating to a UNIX-like</p>
+            <p>This password is used when authenticating to a UNIX-like system</p>
             <button type="button" class="btn btn-secondary"
                 hx-post="/ui/reset/set_unixcred"
                 hx-target="#credentialUpdateDynamicSection">
