Harmonize UI and remove unused css (#3033)
-------

Co-authored-by: Wei Jian Gan <wg@danicapension.dk>
Co-authored-by: William Brown <william@blackhats.net.au>

--- a/server/core/templates/credential_update_set_unixcred_partial.html
+++ b/server/core/templates/credential_update_set_unixcred_partial.html
@@ -56,7 +56,7 @@
     <div class="g-3 d-flex justify-content-end" hx-target="#credentialUpdateDynamicSection">
         <button id="password-cancel" type="button" class="btn btn-danger me-2" hx-get=((Urls::CredReset)) hx-target="body">Cancel</button>
         <button id="password-submit" type="button" class="btn btn-primary"
-                hx-post="/ui/reset/add_password"
+                hx-post="/ui/reset/set_unixcred"
                 hx-include="#newPasswordForm"
         >Submit</button>
     </div>
