--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -5,24 +5,23 @@
     src="/pkg/external/base64.js?v=((crate::https::cache_buster::get_cache_buster_key()))"
     async></script>
 
-<div class="row g-3" id="credentialUpdateDynamicSection"
+<div id="credentialUpdateDynamicSection"
     hx-on::before-swap="stillSwapFailureResponse(event)">
     <form class="needs-validation mb-5 pb-5" novalidate>
         (% match ext_cred_portal %)
         (% when CUExtPortal::None %)
         (% when CUExtPortal::Hidden %)
-        <hr class="my-4" />
         <p>This account is externally managed. Some features may not be
             available.</p>
-        (% when CUExtPortal::Some(url) %)
         <hr class="my-4" />
+        (% when CUExtPortal::Some(url) %)
         <p>This account is externally managed. Some features may not be
             available.</p>
         <a href="(( url ))">Visit the external account portal</a>
+        <hr class="my-4" />
         (% endmatch %)
 
         (% if warnings.len() > 0 %)
-        <hr class="my-4">
         (% for warning in warnings %)
         (% let is_danger = [CURegWarning::WebauthnAttestationUnsatisfiable,
         CURegWarning::Unsatisfiable].contains(warning) %)
@@ -57,6 +56,7 @@
                 (% endif %)
             </div>
             (% endfor %)
+            <hr class="my-4" />
             (% endif %)
 
             <!-- Attested Passkeys -->
@@ -81,15 +81,15 @@
             (% when CUCredState::Modifiable %)
             (% include "credentials_update_passkeys.html" %)
             <!-- Here we are modifiable so we can render the button to add passkeys  -->
-            <div class="btn-group">
-                <button type="button" class="btn btn-primary"
+            <div class="btn-group mt-4">
+                <button type="button" class="btn btn-secondary"
                     hx-post="/ui/reset/add_passkey"
                     hx-vals='{"class": "Any"}'
                     hx-target="#credentialUpdateDynamicSection">
                     Add Passkey
                 </button>
                 <button type="button"
-                    class="btn btn-primary dropdown-toggle dropdown-toggle-split"
+                    class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     <span class="visually-hidden">Toggle Dropdown</span>
                 </button>
@@ -112,9 +112,38 @@
             (% let primary_state = primary_state %)
             (% include "credentials_update_primary.html" %)
 
+            (% match unixcred_state %)
+            (% when CUCredState::Modifiable %)
             <hr class="my-4" />
-            <div id="cred-update-commit-bar" class="toast" role="alert"
-                aria-live="assertive" aria-atomic="true">
+            <h4>UNIX Password</h4>
+            <p>This password is used when authenticating to a UNIX-like system</p>
+            <button type="button" class="btn btn-secondary"
+                hx-post="/ui/reset/set_unixcred"
+                hx-target="#credentialUpdateDynamicSection">
+                Set UNIX Password
+            </button>
+            (% match unixcred %)
+            (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::Password }) %)
+            <button type="button" class="btn btn-outline-danger"
+                hx-post="/ui/api/delete_unixcred"
+                hx-target="#credentialUpdateDynamicSection">
+                Delete UNIX Password
+            </button>
+            (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::GeneratedPassword }) %)
+            (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::Passkey(_) }) %)
+            (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::PasswordMfa(_totp_set, _security_key_labels, _backup_codes_remaining)}) %)
+            (% when None %)
+            (% endmatch %)
+            <!-- (% if matches!(primary_state, CUCredState::Modifiable) %)
+
+            (% endif %) -->
+            (% when CUCredState::DeleteOnly %)
+            (% when CUCredState::AccessDeny %)
+            (% when CUCredState::PolicyDeny %)
+            (% endmatch %)
+
+            <hr class="my-4" />
+            <div id="cred-update-commit-bar" class="toast">
                 <div class="toast-body">
                     <span class="d-flex align-items-center">
                         <div>
