Change to text input and use inputmode numeric for TOTP prompts.

--- a/server/core/templates/login.html
+++ b/server/core/templates/login.html
@@ -36,7 +36,8 @@
 		class="d-none"
 		id="totp"
 		name="totp"
-		type="number"
+		type="text"
+		inputmode="numeric"
 		autocomplete="one-time-code"
 		value=""
 	/>
