--- a/server/core/templates/login_totp.html
+++ b/server/core/templates/login_totp.html
@@ -15,7 +15,8 @@
 			class="autofocus form-control"
 			id="totp"
 			name="totp"
-			type="number"
+			type="text"
+			inputmode="numeric"
 			autocomplete="one-time-code"
 			value="(( totp ))"
 			required=true
