Improve OAuth2 authorisation ux
- Resolve an issue where oauth2 could trigger the login page to
  incorrectly redirect to an oauth2 application instead of apps
- Add indication of what client application we are accessing
  if the session is not yet authenticated

--- a/server/core/templates/login_base.html
+++ b/server/core/templates/login_base.html
@@ -20,6 +20,10 @@
 	<div class="alert alert-info" role="alert">
 		Reauthenticating as (( reauth.username )) to access (( reauth.purpose ))
 	</div>
+	(% else if let Some(oauth2) = display_ctx.oauth2 %)
+	<div class="alert alert-info" role="alert">
+		Authenticate to access (( oauth2.client_name ))
+	</div>
 	(% endif %)
 	<div>
 		(% block logincontainer %)
