Update missing inputmode numeric when adding a new TOTP.

--- a/server/core/templates/credential_update_add_totp_partial.html
+++ b/server/core/templates/credential_update_add_totp_partial.html
@@ -35,7 +35,8 @@
                     name="checkTOTPCode"
                     id="new-totp-check"
                     value="(( totp_value ))"
-                    type="number"
+                    type="text"
+                    inputmode="numeric"
                     required
             />
 
