--- a/server/core/templates/login_webauthn.html
+++ b/server/core/templates/login_webauthn.html
@@ -22,7 +22,7 @@
     (% else %)
     <form id="cred-form" action="/ui/login/seckey" method="POST">
         <input hidden="hidden" name="cred" id="cred">
-        <button hx-disabel type="button" autofocus=true class="btn btn-dark autofocus"
+        <button hx-disable type="button" autofocus=true class="btn btn-dark autofocus"
              id="start-seckey-button">Use Security Key</button>
     </form>
     (% endif %)
