UI/Feature polish (#3191)
Post release some small user issues arose

* Optimise the autofocus for logins with passkeys to limit clicks
* Sort login mechs by strength
* Fix cookies to persist between browser restarts

--- a/server/core/templates/login_mech_choose.html
+++ b/server/core/templates/login_mech_choose.html
@@ -11,6 +11,7 @@
 			<form id="login" action="/ui/login/mech_choose" method="post">
 				<input type="hidden" id="mech" name="mech" value="(( mech.value ))" />
 				<button
+					(% if mech.autofocus %)autofocus(% endif %)
 					type="submit"
 					class="btn btn-dark"
 				>(( mech.name ))</button>
