Minor tweaks to cred reset ui
Remove the cancel mfa button as we implicitly cancel mfa reg now.
Adjust the main cred reset form to use more screen space.

--- a/server/core/templates/credentials_reset.html
+++ b/server/core/templates/credentials_reset.html
@@ -5,13 +5,14 @@
 (% endblock %)
 
 (% block body %)
-<main class="form-cred-reset-body container my-auto">
+<main class="container-lg my-auto">
     <div class="text-center">
         <h3>Updating Credentials</h3>
         <p><strong>User:</strong> (( names ))</p>
         <p><strong>Kanidm domain:</strong> (( domain_info.display_name() ))</p>
     </div>
-    <hr class="my-4" />
+    <div class="ps-sm-4 ps-md-5 pt-sm-0 pt-4">
     (( credentials_update_partial|safe ))
+    </div>
 </main>
 (% endblock %)
