--- a/server/core/templates/credentials_update_primary.html
+++ b/server/core/templates/credentials_update_primary.html
@@ -25,7 +25,7 @@
                             <h6><b>Password</b></h6>
                         </div>
                         <div class="flex-shrink-0 ps-3">
-                            <button type="button" class="btn btn-sm btn-secondary" hx-post="/ui/reset/change_password">
+                            <button type="button" class="btn btn-sm btn-primary" hx-post="/ui/reset/change_password">
                                 Change Password
                             </button>
                         </div>
@@ -36,7 +36,7 @@
                             <p>TOTPs are 6 digit codes generated on-demand as a second authentication factor.</p>
                         </div>
                         <div class="flex-shrink-0 ps-3">
-                            <button type="button" class="btn btn-sm btn-secondary" hx-post="/ui/reset/add_totp">
+                            <button type="button" class="btn btn-sm btn-primary" hx-post="/ui/reset/add_totp">
                                 Add TOTP
                             </button>
                         </div>
