--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -22,8 +22,9 @@
             src="/pkg/img/logo-square.svg?v=((crate::https::cache_buster::get_cache_buster_key()))"
             alt="(( domain_info.display_name() ))" class="kanidm_logo" />
         (% endif %)
-        <h2>Credential Reset</h2>
-        <h3>(( domain_info.display_name() ))</h3>
+        <h2>(( domain_info.display_name() ))</h2>
+        <div />
+        <h3>Credential Reset</h3>
     </center>
     <form class="mb-3">
         <div>
