--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -81,24 +81,12 @@
             (% when CUCredState::Modifiable %)
             (% include "credentials_update_passkeys.html" %)
             <!-- Here we are modifiable so we can render the button to add passkeys  -->
-            <div class="btn-group mt-4">
-                <button type="button" class="btn btn-secondary"
-                    hx-post="/ui/reset/add_passkey"
-                    hx-vals='{"class": "Any"}'
-                    hx-target="#credentialUpdateDynamicSection">
-                    Add Passkey
-                </button>
-                <button type="button"
-                    class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <span class="visually-hidden">Toggle Dropdown</span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" hx-post="/ui/api/cancel_mfareg"
-                            hx-swap="none">Cancel MFA Registration
-                            session</a></li>
-                </ul>
-            </div>
+            <button type="button" class="btn btn-primary"
+                hx-post="/ui/reset/add_passkey"
+                hx-vals='{"class": "Any"}'
+                hx-target="#credentialUpdateDynamicSection">
+                Add Passkey
+            </button>
 
             (% when CUCredState::DeleteOnly %)
             (% if passkeys.len() > 0 %)
@@ -117,7 +105,7 @@
             <hr class="my-4" />
             <h4>UNIX Password</h4>
             <p>This password is used when authenticating to a UNIX-like system</p>
-            <button type="button" class="btn btn-secondary"
+            <button type="button" class="btn btn-primary"
                 hx-post="/ui/reset/set_unixcred"
                 hx-target="#credentialUpdateDynamicSection">
                 Set UNIX Password
