Autocomplete password during reauth with TOTP
During a re-auth flow, the password was not autocompleted once
totp was autocompleted. This is because in a normal login flow
the autocomplete is performed on the first login.html page,
but in a re-auth we skip that page.

This adds the proper handling to allow the pw to autofill
in the background once the TOTP is completed.

--- a/server/core/templates/login.html
+++ b/server/core/templates/login.html
@@ -23,7 +23,7 @@
 		/>
 	</div>
 
-	<!-- BEGIN: to work better with password managers -->
+	<!-- BEGIN: allows a password manager to autocomplete these fields in the BG. -->
 	<input
 		class="d-none"
 		id="password"
