Use specific errors for intent token revoked
Rather than the generic 'invalid state' error, we now return
proper site-specific errors for credential commit failures, with
error messages to explain what went wrong.

--- a/server/core/templates/unrecoverable_error.html
+++ b/server/core/templates/unrecoverable_error.html
@@ -9,8 +9,9 @@
 	<h2>Error</h2>
 	<main id="main">
 		<p>An unrecoverable error occurred. Please contact your administrator with the details below.</p>
-		<p>Error Code: (( err_code ))</p>
 		<p>Operation ID: (( operation_id ))</p>
+		<p>Error Code: (( err_code ))</p>
+		<a href=((Urls::Ui))>Return</a>
 	</main>
 (% endblock %)
 
