Re-add enrol another device flow
This was a commonly requested re-addition to the new webui. This
adds the ability for someone to scan a qr code or follow a link
to enrol another device to their account.

--- a/server/core/templates/credential_update_add_totp_partial.html
+++ b/server/core/templates/credential_update_add_totp_partial.html
@@ -1,8 +1,7 @@
 <div>
     <div id="totpInfo">
         (% if let Some(TotpInit with { secret, qr_code_svg, steps, digits, algo, uri }) = totp_init %)
-            <div>((qr_code_svg|safe))
-            </div>
+            <div>((qr_code_svg|safe))</div>
             <code>((uri|safe))</code>
 
             <h3>TOTP details</h3>
