--- a/server/core/templates/user_settings_partial_base.html
+++ b/server/core/templates/user_settings_partial_base.html
@@ -20,6 +20,8 @@
             ProfileMenuItems::UserProfile, "person") %)
             (% call side_menu_item("Credentials", (Urls::UpdateCredentials),
             ProfileMenuItems::Credentials, "shield-lock") %)
+            (% call side_menu_item("Enrol Device", (Urls::EnrolDevice),
+            ProfileMenuItems::EnrolDevice, "phone-flip") %)
         </ul>
         <div id="settings-window" class="flex-grow-1 ps-sm-4 ps-md-5 pt-sm-0 pt-4">
             <div>
