fix navbar styles

--- a/server/core/templates/navbar.html
+++ b/server/core/templates/navbar.html
@@ -21,7 +21,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <ul class="navbar-nav">
                 <li>
                     <a class="nav-link" href=((Urls::Apps))>
                         <span data-feather="file"></span>Applications</a>
@@ -31,7 +31,7 @@
                         <span data-feather="file"></span>Profile</a>
                 </li>
             </ul>
-            <ul class="navbar-nav me-auto mb-2 mb-md-0 ms-md-auto">
+            <ul class="navbar-nav ms-md-auto">
                 <li>
                     <a class="nav-link" href="#" data-bs-toggle="modal"
                         data-bs-target="#signoutModal">Sign out</a>
