--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -85,12 +85,14 @@
             (% when CUCredState::Modifiable %)
             (% include "credentials_update_passkeys.html" %)
             <!-- Here we are modifiable so we can render the button to add passkeys  -->
+            <div class="mt-3">
             <button type="button" class="btn btn-primary"
                 hx-post="/ui/reset/add_passkey"
                 hx-vals='{"class": "Any"}'
                 hx-target="#credentialUpdateDynamicSection">
                 Add Passkey
             </button>
+            </div>
 
             (% when CUCredState::DeleteOnly %)
             (% if passkeys.len() > 0 %)
