tweak design and spacing a little

--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -86,12 +86,12 @@
             (% include "credentials_update_passkeys.html" %)
             <!-- Here we are modifiable so we can render the button to add passkeys  -->
             <div class="mt-3">
-            <button type="button" class="btn btn-primary"
-                hx-post="/ui/reset/add_passkey"
-                hx-vals='{"class": "Any"}'
-                hx-target="#credentialUpdateDynamicSection">
-                Add Passkey
-            </button>
+                <button type="button" class="btn btn-primary"
+                    hx-post="/ui/reset/add_passkey"
+                    hx-vals='{"class": "Any"}'
+                    hx-target="#credentialUpdateDynamicSection">
+                    Add Passkey
+                </button>
             </div>
 
             (% when CUCredState::DeleteOnly %)
@@ -199,7 +199,7 @@
                             </svg>
                             <b>Careful</b> - Unsaved changes will be lost</div>
                     </span>
-                    <div class="mt-2 pt-2 border-top">
+                    <div class="mt-3 d-flex column-gap-2">
                         <button class="btn btn-danger"
                             hx-post="/ui/api/cu_cancel"
                             hx-boost="false"
