change label text to "remove" to match other sections

--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -157,7 +157,7 @@
                                 hx-post="/ui/api/remove_publickey"
                                 hx-vals='{"name": "(( keyname ))"}'
                                 hx-target="#credentialUpdateDynamicSection">
-                                Delete
+                                Remove
                             </button>
                         </div>
                         <div><span class="font-monospace text-break">SHA256:(( sshkey.key ))</span></div>
