--- a/server/core/static/style.css
+++ b/server/core/static/style.css
@@ -37,9 +37,8 @@ body {
     font-weight: 600;
   }
 
-  &:hover,
-  &.active {
-    background-color: var(--bs-gray-300);
+  &:hover, &.active {
+    background-color: var(--bs-tertiary-bg);
   }
 
   .icon-container img {
@@ -57,6 +56,24 @@ body {
 /*
  * Navbar
  */
+nav.kanidm_navbar {
+  background-color: var(--bs-navbar-brand-color);
+}
+
+nav a.navbar-brand,
+nav a.nav-link {
+  color: var(--bs-body-bg);
+}
+
+nav a.navbar-brand:hover,
+nav a.nav-link:hover {
+  color: var(--bs-secondary-bg);
+}
+
+footer {
+  background-color: var(--bs-tertiary-bg)
+}
+
 
 .kanidm_logo {
   width: 12em;
@@ -79,10 +96,8 @@ body {
   align-items: center;
   margin: auto;
   border-radius: 15px;
-  background: #21252915;
-  box-shadow:
-    -5px -5px 11px #ededed,
-    5px 5px 11px #ffffff;
+  background-color: #21252915;
+  box-shadow: -5px -5px 11px #ededed, 5px 5px 11px #ffffff;
   margin: 15px;
 }
 
@@ -122,15 +137,15 @@ body {
 }
 
 .totp-timer__path-remaining.green {
-  color: rgb(65, 184, 131);
+  color: var(--bs-success);
 }
 
 .totp-timer__path-remaining.orange {
-  color: orange;
+  color: var(--bs-warning);
 }
 
 .totp-timer__path-remaining.red {
-  color: red;
+  color: var(--bs-danger);
 }
 
 .totp-timer__path-remaining.no-transition {
