Renaming "TOTP" in the login flow Fixes #3337

--- a/server/core/templates/login_totp.html
+++ b/server/core/templates/login_totp.html
@@ -1,11 +1,13 @@
 (% extends "login_base.html" %)
 
 (% block logincontainer %)
-<label for="totp" class="form-label">TOTP</label>
+<label for="totp" class="form-label">Two-factor authentication code</label>
 (% match errors %)
 	(% when LoginTotpError::Syntax %)
-		<span class="error">Invalid Value</span>
-		<span class="error">TOTP must only consist of numbers</span>
+	<div class="alert alert-danger" role="alert">
+		<p>Invalid Value</p>
+		<p>Code must only consist of numbers, please try again.</p>
+	</div>
 	(% when LoginTotpError::None %)
 (% endmatch %)
 <form id="login" action="/ui/login/totp" method="post">
