--- a/server/core/templates/base.html
+++ b/server/core/templates/base.html
@@ -15,6 +15,9 @@
 		<script
 			src="/pkg/external/bootstrap.bundle.min.js?v=((crate::https::cache_buster::get_cache_buster_key()))"
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
+		<script
+			src="/pkg/style.js?v=((crate::https::cache_buster::get_cache_buster_key()))"
+			defer></script>
 		<link rel="stylesheet"
 			href="/pkg/style.css?v=((crate::https::cache_buster::get_cache_buster_key()))" />
 
@@ -22,7 +25,7 @@
 	</head>
 	<body class="flex-column d-flex h-100">
 		(% block body %)(% endblock %)
-		<footer class="footer mt-auto py-3 bg-light text-end">
+		<footer class="footer mt-auto py-3 bs-secondary-bg text-end">
 			<div class="container">
 				<span class="text-muted">Powered by <a
 						href="https://kanidm.com">Kanidm</a></span>
