--- a/server/core/templates/base_htmx.html
+++ b/server/core/templates/base_htmx.html
@@ -19,6 +19,9 @@
 		<script
 			src="/pkg/external/htmx.min.1.9.12.js?v=((crate::https::cache_buster::get_cache_buster_key()))"
 			integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"></script>
+		<script
+			src="/pkg/style.js?v=((crate::https::cache_buster::get_cache_buster_key()))"
+			defer></script>
 		<link rel="stylesheet"
 			href="/pkg/style.css?v=((crate::https::cache_buster::get_cache_buster_key()))" />
 
@@ -27,7 +30,7 @@
 	<body hx-boost="true" class="flex-column d-flex h-100">
 		(% block nav %)(% endblock %)
 		(% block body %)(% endblock %)
-		<footer class="footer mt-auto py-3 bg-light text-end">
+		<footer class="footer mt-auto py-3 bs-secondary-bg text-end">
 			<div class="container">
 				<span class="text-muted">Powered by <a
 						href="https://kanidm.com">Kanidm</a></span>
