Consistently mention applications instead of apps.

--- a/server/core/templates/apps.html
+++ b/server/core/templates/apps.html
@@ -1,5 +1,5 @@
 (% extends "base_htmx_with_nav.html" %)
-(% block title %)Apps(% endblock %)
+(% block title %)Applications(% endblock %)
 
 (% block head %)
 (% endblock %)
