--- a/server/core/templates/apps_partial.html
+++ b/server/core/templates/apps_partial.html
@@ -1,6 +1,6 @@
 <main class="container-lg">
 	<div>
-		<h2>Applications list</h2>
+		<h2>Applications</h2>
 	</div>
 	<hr />
 	(% if apps.is_empty() %)
