--- a/server/core/templates/navbar.html
+++ b/server/core/templates/navbar.html
@@ -24,7 +24,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li>
                     <a class="nav-link" href=((Urls::Apps))>
-                        <span data-feather="file"></span>Apps</a>
+                        <span data-feather="file"></span>Applications</a>
                 </li>
                 <li>
                     <a class="nav-link" href=((Urls::Profile))>
