Small formatting change for enrol device.

--- a/server/core/templates/enrol_device.html
+++ b/server/core/templates/enrol_device.html
@@ -9,9 +9,11 @@ Enrol Another Device
 
 <div id="intentInfo">
     <div>((qr_code_svg|safe))</div>
-    <ul>
-        <li>Url: <code>((uri|safe))</code></li>
-        <li>Secret: <code>(( secret ))</code></li>
-    </ul>
+    <dl>
+        <dt>URL</dt>
+        <dd><code>((uri|safe))</code></dd>
+        <dt>Secret</dt>
+        <dd><code>(( secret ))</code></dd>
+    </dl>
 </div>
 (% endblock %)
