Update phrasing in credentials page.

--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -33,9 +33,10 @@
 
                 (% match warning %)
                 (% when CURegWarning::MfaRequired %)
-                Multi-Factor Authentication is required for your account. Either
-                add TOTP or remove your password in favour of passkeys to
-                submit.
+                Multi-Factor Authentication is required for your account. Delete
+                the generated password and set up either a passkey (recommended)
+                or password and two-factor authentication (TOTP) to save
+                changes.
                 (% when CURegWarning::PasskeyRequired %)
                 Passkeys are required for your account.
                 (% when CURegWarning::AttestedPasskeyRequired %)
@@ -44,10 +45,10 @@
                 Attested Resident Keys are required for your account.
                 (% when CURegWarning::WebauthnAttestationUnsatisfiable %)
                 A webauthn attestation policy conflict has occurred and you will
-                not be able to save your credentials
+                not be able to save your credentials.
                 (% when CURegWarning::Unsatisfiable %)
                 An account policy conflict has occurred and you will not be able
-                to save your credentials
+                to save your credentials.
                 (% endmatch %)
 
                 (% if is_danger %)
