address PR comments and fix rebase

--- a/server/core/templates/credential_update_add_ssh_publickey_partial.html
+++ b/server/core/templates/credential_update_add_ssh_publickey_partial.html
@@ -1,9 +1,9 @@
 <hr>
 <div class="d-flex flex-column row-gap-4">
     <h4>Add new SSH Key</h4>
-    <form class="row-gap-3 d-flex flex-column needs-validation" id="newPasswordForm"
+    <form class="row-gap-3 d-flex flex-column needs-validation"
         hx-target="#credentialUpdateDynamicSection"
-        hx-post="/ui/reset/add_publickey">
+        hx-post="/ui/reset/add_ssh_publickey">
         <div>
             <label for="key-title" class="form-label">Title</label>
             <input type="text" class="form-control(% if let Some(_) = title_error %) is-invalid(% endif %)" id="key-title" name="title" aria-describedby="title-validation-feedback">
@@ -23,8 +23,8 @@
         </div>        
 
         <div class="column-gap-2 d-flex justify-content-end mt-2" hx-target="#credentialUpdateDynamicSection">
-            <button id="password-cancel" type="button" class="btn btn-danger" hx-get=((Urls::CredReset)) hx-target="body">Cancel</button>
-            <button id="password-submit" type="submit" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-danger" hx-get=((Urls::CredReset)) hx-target="body">Cancel</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </form>
 </div>
